plugins {
    id 'java'
    id 'groovy'
    id 'io.freefair.lombok' version '6.6'
}

group 'com.github.pgagala'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = "19.PREVIEW"
    targetCompatibility = "19.PREVIEW"
}

dependencies {
    testImplementation platform('org.apache.groovy:groovy-bom:4.0.6')
    testImplementation 'org.apache.groovy:groovy'
    testImplementation platform("org.spockframework:spock-bom:2.3-groovy-4.0")
    testImplementation "org.spockframework:spock-core"
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jvmArgs(['--enable-preview'])
}
